--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Calculation of Lattice Renormalization Constants of Bilinear Operators on the Lattice with ETMC Nf=4 (Clover) Gauge Configurations
+Calculation of Renormalization Constants of Bilinear Operators on the Lattice with ETMC Nf=4 (Clover) Gauge Configurations
